[package]
name = "rusty_trap"
version = "0.1.0"
authors = ["Joseph Kain <joekain@gmail.com>"]

[dependencies]
libc = "0.2.174"
nix = {version = "0.30.1", features = ["process", "ptrace", "signal"]}
object = "0.37"

[lib]
name = "rusty_trap"
path = "src/lib.rs"

[[bin]]
name = "twelve"
path = "tests/inferiors/twelve.rs"

[[bin]]
name = "loop"
path = "tests/inferiors/loop.rs"
